tests/purs/failing/CoercibleNominal.out
Error found:
in module [33mMain[0m
at tests/purs/failing/CoercibleNominal.purs:11:20 - 11:26 (line 11, column 20 - line 11, column 26)

  Could not match type
  [33m    [0m
  [33m  a0[0m
  [33m    [0m
  with type
  [33m    [0m
  [33m  b2[0m
  [33m    [0m

while solving type class constraint
[33m                                       [0m
[33m  Prim.Coerce.Coercible (Nominal a0 c1)[0m
[33m                        (Nominal b2 c1)[0m
[33m                                       [0m
while checking that type [33mforall (a :: Type) (b :: Type). Coercible @Type a b => a -> b[0m
  is at least as general as type [33mNominal a0 c1 -> Nominal b2 c1[0m
while checking that expression [33mcoerce[0m
  has type [33mNominal a0 c1 -> Nominal b2 c1[0m
in value declaration [33mnominalToNominal[0m

where [33ma0[0m is a rigid type variable
        bound at (line 11, column 20 - line 11, column 26)
      [33mb2[0m is a rigid type variable
        bound at (line 11, column 20 - line 11, column 26)
      [33mc1[0m is a rigid type variable
        bound at (line 11, column 20 - line 11, column 26)

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

